--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapViewActivity">
+    tools:context=".DetailedActivity">
 
-    <org.osmdroid.views.MapView
-        android:id="@+id/mapView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:clickable="true" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/detailedRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="10dp" />
 
 </RelativeLayout>
